welcome.lessons.welcome.bdr.BDR.scala.code
fini = false
while fini {
  avance()
} 